Replace Java 21 list helpers with index access